# s2client-api

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CREDITS  Doxyfile  README.md  annotated.html  classes.html  classsc2_1_1_action_feature_layer_interface-members.html  classsc2_1_1_action_feature_layer_interface.html  classsc2_1_1_action_interface-members.html  classsc2_1_1_action_interface.html  classsc2_1_1_agent-members.html  classsc2_1_1_agent.html  classsc2_1_1_agent_control_interface-members.html  classsc2_1_1_agent_control_interface.html  classsc2_1_1_arg_parser-members.html  classsc2_1_1_arg_parser.html  classsc2_1_1_client-members.html  classsc2_1_1_client.html  classsc2_1_1_client_events-members.html  classsc2_1_1_client_events.html  classsc2_1_1_connection-members.html  classsc2_1_1_connection.html  classsc2_1_1_control_interface-members.html  classsc2_1_1_control_interface.html  classsc2_1_1_coordinator-members.html  classsc2_1_1_coordinator.html  classsc2_1_1_debug_interface-members.html  classsc2_1_1_debug_interface.html  classsc2_1_1_message_response_ptr-members.html  classsc2_1_1_message_response_ptr.html  classsc2_1_1_observation_interface-members.html  classsc2_1_1_observation_interface.html  classsc2_1_1_observer_action_interface-members.html  classsc2_1_1_observer_action_interface.html  classsc2_1_1_property_reader-members.html  classsc2_1_1_property_reader.html  (+222 more)
cmake/: SC2APIConfig.cmake.in  install.cmake  install_dirs.cmake
docs/: building.md  getting_started.md  linux.md  protocol.md  tutorial1.md  tutorial2.md  tutorial3.md
docs/doxygen/: mainpage.dox  mainpage.md
docs/html/: annotated.html  arg__parser_8h_source.html  class_arg_parser-members.html  class_arg_parser.html  class_property_reader-members.html  class_property_reader.html  classes.html  classsc2_1_1_action_feature_layer_interface-members.html  classsc2_1_1_action_feature_layer_interface.html  classsc2_1_1_action_imp-members.html  classsc2_1_1_action_imp.html  classsc2_1_1_action_interface-members.html  classsc2_1_1_action_interface.html  classsc2_1_1_action_raw-members.html  classsc2_1_1_action_raw.html  classsc2_1_1_agent-members.html  classsc2_1_1_agent.html  classsc2_1_1_agent_control_imp-members.html  classsc2_1_1_agent_control_imp.html  classsc2_1_1_agent_control_interface-members.html  classsc2_1_1_agent_control_interface.html  classsc2_1_1_arg_parser-members.html  classsc2_1_1_arg_parser.html  classsc2_1_1_client-members.html  classsc2_1_1_client.html  classsc2_1_1_client_events-members.html  classsc2_1_1_client_events.html  classsc2_1_1_connection-members.html  classsc2_1_1_connection.html  classsc2_1_1_control_imp-members.html  classsc2_1_1_control_imp.html  classsc2_1_1_control_interface-members.html  classsc2_1_1_control_interface.html  classsc2_1_1_coordinator-members.html  classsc2_1_1_coordinator.html  classsc2_1_1_debug_imp-members.html  classsc2_1_1_debug_imp.html  classsc2_1_1_debug_interface-members.html  classsc2_1_1_debug_interface.html  classsc2_1_1_message_response_ptr-members.html  (+247 more)
docs/latex/: annotated.tex  class_arg_parser.tex  class_property_reader.tex  classsc2_1_1_action_feature_layer_interface.tex  classsc2_1_1_action_imp.eps  classsc2_1_1_action_imp.tex  classsc2_1_1_action_interface.eps  classsc2_1_1_action_interface.tex  classsc2_1_1_action_raw.tex  classsc2_1_1_agent.eps  classsc2_1_1_agent.tex  classsc2_1_1_agent_control_imp.eps  classsc2_1_1_agent_control_imp.tex  classsc2_1_1_agent_control_interface.eps  classsc2_1_1_agent_control_interface.tex  classsc2_1_1_arg_parser.tex  classsc2_1_1_client.eps  classsc2_1_1_client.tex  classsc2_1_1_client_events.eps  classsc2_1_1_client_events.tex  classsc2_1_1_connection.tex  classsc2_1_1_control_imp.eps  (+122 more)
examples/: CMakeLists.txt  Intermediate_bot.cc  annoying_helper.cc  bot.cc  bot_micro.cc  bot_mp.cc  bot_simple.cc  bot_zealot.cc  echo_actions.cc  feature_layers.cc  intermediate_bot.cc  minihraJama.cc  proxy.cc  rendered.cc  replay.cc  replay_advanced.cc  save_load.cc  tutorial.cc
examples/common/: bot_examples.cc  bot_examples.h
maps/Test/: Empty.SC2Map  (+2 more)
ql/: CMakeLists.txt
ql/qlbot/: bot_marine.cpp  bot_ql_test.cpp  bot_zealot.cpp  zealot_state.cpp
ql/qllib/: QInit.cpp  QInitZealot.cpp  QL.cpp  Stav.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_10.js  classes_2.js  classes_7.js  classes_9.js  classes_a.js  classes_d.js  classes_e.js  enums_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  files_0.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_d.js  (+18 more)
src/: CMakeLists.txt
src/sc2api/: sc2_action.cc  sc2_agent.cc  sc2_args.cc  sc2_client.cc  sc2_common.cc  sc2_connection.cc  sc2_coordinator.cc  sc2_data.cc  sc2_game_settings.cc  sc2_map_info.cpp  sc2_proto_interface.cc  sc2_proto_to_pods.cc  sc2_replay_observer.cc  sc2_score.cc  sc2_server.cc  sc2_typeenums.cc  sc2_unit.cc
src/sc2lib/: sc2_search.cc  sc2_utils.cc
src/sc2renderer/: sc2_renderer.cc
src/sc2utils/: dirent.h  sc2_arg_parser.cc  sc2_manage_process.cc  sc2_misc_utils.cc  sc2_property_reader.cc  sc2_scan_directory.cc
tests/: CMakeLists.txt  all_tests.cc  feature_layers_shared.cc  feature_layers_shared.h  test_ability_remap.cc  test_actions.cc  test_actions.h  test_app.cc  test_app.h  test_common.cc  test_common.h  test_feature_layer.cc  test_feature_layer.h  test_feature_layer_mp.cc  test_feature_layer_mp.h  test_framework.cc  test_framework.h  test_movement_combat.cc  test_movement_combat.h  test_multiplayer.cc  test_multiplayer.h  test_observation_interface.cc  test_observation_interface.h  test_performance.cc  test_performance.h  test_rendered.cc  test_rendered.h  test_restart.cc  test_restart.h  test_snapshots.cc  test_snapshots.h  test_unit_command.cc  test_unit_command.h  test_unit_command_common.cc  test_unit_command_common.h
(+152 files in other folders)
